--- a/cinema/index.html
+++ b/cinema/index.html
@@ -6,9 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="fonts/fonts.css">
 </head>
-<body>
-    
+<body background="images/bg.png">
+    <div class="container">
+        <div class="header">
+            <div class="header__logo"><img src="images/logo.svg" alt="logo"></div>
+            <div class="header__menu">
+                <ul class="header__list">
+                    <li class="header__itemlist">Главная</li>
+                    <li class="header__itemlist">Фильмы</li>
+                    <li class="header__itemlist">Кинотеатры</li>
+                    <li class="header__itemlist">События</li>
+                    <li class="header__itemlist">Поддержка</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
